# kotoba

./: pyproject.toml
.github/workflows/: .pylint.yml  flake8.yml  pytest.yml
kotoba_api/: app.py  config.py  util.py
tests/: test_main.py
